# C-DERS-NOTLARIM

./: callbyreference  callbyreference.cpp  const.cpp  static  static.cpp  tempCodeRunnerFile.cpp  try-catch  try-catch.cpp
Algoritmalar/: Ornek1  Ornek1.cpp  Sinav2Sorusu  Sinav2Sorusu.cpp  SinavSorusu  SinavSorusu.cpp  tempCodeRunnerFile.cpp
AlgoritmayaGiris/: IfElseKosulları  IfElseKosulları.cpp  IfElseKullanimiOrnekler  IfElseKullanimiOrnekler.cpp  MantiksalOperatorler.cpp  Ornek_MantiksalOperatorler  Ornek_MantiksalOperatorler.cpp  OutputEkranindaTurkceKullanimi  OutputEkranindaTurkceKullanimi.cpp  SinavSorusu  SinavSorusu.cpp  SinavSorusu2.cpp  SwitchCase  SwitchCase.cpp
Baslangic/: bismillah  bismillah.cpp
ConstructorlardaVarsayilanDeger/: CMakeLists.txt  main.cpp
Derslerden Notlar/: .directory  Bazı String Metodları.odt
DinamikBellekYonetimi/: DinamikBellekYonetimi.cpp  NULL-Pointer.cpp  fonksiyonlarinPointerReturnEtmesi  fonksiyonlarinPointerReturnEtmesi.cpp  new-delete  new-delete.cpp
Diziler/: CokBoyutluDiziler  CokBoyutluDiziler.cpp  DizilerGiris  DizilerGiris.cpp  Diziler_Ornek1  Diziler_Ornek1.cpp  Diziler_Ornek2  Diziler_Ornek2.cpp  DizilerinFonksiyonlardaParametreOlarakKullanilmasi  DizilerinFonksiyonlardaParametreOlarakKullanilmasi.cpp  Ornek1CokBoyutluDizi  Ornek1CokBoyutluDizi.cpp  Ornek_DizilerveDonguler  Ornek_DizilerveDonguler.cpp  tempCodeRunnerFile.cpp
DosyaIslemleri/: CMakeLists.txt  main.cpp
Fonksiyonlar/: FonksiyonlarveReturn  FonksiyonlarveReturn.cpp  OrnekRandFonksiyonu  OrnekRandFonksiyonu.cpp  fonksiyonOverloading  fonksiyonOverloading.cpp  randFonksiyonu  randFonksiyonu.cpp
FonksiyonlarOncesiOrnekSorular/: BasitATMsistemi.cpp  MiniHesapMakinesi  MiniHesapMakinesi.cpp  SaatUcretiHesaplayici  SicaklikDonusturveUyar  SicaklikDonusturveUyar.cpp  kargoucretihesaplama  negatifsayigirilenekadarOrtalamahesapla.cpp  tempCodeRunnerFile.cpp  yasveboyuygunlugu  yasveboyuygunlugu.cpp
Friend_Siniflar_ve_Fonksiyonlar/: CMakeLists.txt  FriendClass.cpp  FriendFonksiyonlar.cpp  ogrenci.cpp  ogrenci.h
Inheritance/: CMakeLists.txt  Hayvan.cpp  Hayvan.h  hayvan.cpp  hayvan.h  kedi.cpp  kedi.h  kopek.cpp  kopek.h  kus.cpp  kus.h  main.cpp
KullanicidanVerialmavekutuphane/: Kullanicidan_Input_Alma  Kullanicidan_Input_Alma.cpp  Kutuphane_Kullanimi  Kutuphane_Kullanimi.cpp  Ornek_Soru1  Ornek_Soru1.cpp
Object_Orianted_Programlama/: IlkClassveObject.cpp  Otomobil.cpp  Otomobil.h
Object_Orianted_Programlama/Class-DikdortgenOrnegi/: CMakeLists.txt  dikdortgen.cpp  dikdortgen.h  main.cpp
Object_Orianted_Programlama/Construstors/: CMakeLists.txt  Otomobil.cpp  Otomobil.h  main.cpp
Operator_Overloading/: CMakeLists.txt  Main.cpp  OrnekSoru_Overloading.cpp
OrnekDizilerveoncesi/: DiziOrtalamaHesaplama  DizideArama  DizideArama.cpp  DiziyiTersineCevirme  DiziyiTersineCevirme.cpp  FonksiyonlaOrtakElemanBulma  FonksiyonlaOrtakElemanBulma.cpp  MatrisKosegenToplam  MatrisKosegenToplam.cpp  MatrisSınavNotuHesaplama.cpp  MatrisToplama  OrneklerDizilerveoncesi  RastgeleFrekans  RastgeleFrekans.cpp  RastgeleSayiUretimiveKarsilastirma.cpp  tempCodeRunnerFile.cpp
Ornekler_Strings/: cokboyutludizi+string  do-while-rand-str.cpp  fonksiyonbasitornek  fonksiyonoverloading+string  fonksiyonoverloading+string.cpp  for+dizi+str.cpp  operatorler+if  operatorler+if.cpp  prefix-postfix-for  prefix-postfix-for.cpp  switchcase+karakter_isleme.cpp  veritipleri+if-else  veritipleri+if-else.cpp  while+string
Pointers/: PointerNedir  PointerNedir.cpp  PointerPekistirme  PointerPekistirme.cpp  PointerlarveDizilerarasındakiİlişki  PointerlarveDizilerarasındakiİlişki.cpp
Polymorphism_ve_Virtual_Fonksiyon/: CMakeLists.txt  main.cpp
ProgramlamayaGiris/: .directory  (+10 more)
Struct/Struct_Ileri_Seviye/: CMakeLists.txt  Ornek.cpp  main.cpp
TryCatch_ile_Hata_Yonetimi/: CMakeLists.txt  Test.cpp  hatasinifi.cpp  hatasinifi.h  main.cpp
autoKullanimi/: CMakeLists.txt  main.cpp
denemem/: CMakeLists.txt
(+90 files in other folders)
